2007-11-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/alpha.hg:
	* clutter/src/behaviour-depth.hg:
	* clutter/src/behaviour-ellipse.hg:
	* clutter/src/behaviour-opacity.hg:
	* clutter/src/behaviour-path.hg:
	* clutter/src/behaviour-rotate.hg:
	* clutter/src/behaviour-scale.hg:
	* clutter/src/behaviour.ccg:
	* clutter/src/behaviour.hg:
	* clutter/src/clutter_enums.defs:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs:
	* clutter/src/container.hg:
	* clutter/src/entry.hg:
	* clutter/src/group.hg:
	* clutter/src/label.hg:
	* clutter/src/timeline.hg:
	* tools/m4/convert_cluttermm.m4: wrapped a lot of new API introduced by
	generating new .defs files and cleaned up some of the missing stuff from
	before, including wrapping a lot of new properties

2007-11-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_enums.defs:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs: re-generated defs

2007-11-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* MAINTAINERS: I figure I might as well add myself as a maintainer

2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg: Added a constructor and create() 
	that takes a regular ClutterAlphaFunc, because the slot version 
	seems to have refcount problems. We might want this anyway, so it 
	is easy for people to use new standard clutter ClutterAlphaFuncs. 
	* tests/test-alpha-creation.cc: Use the new constructor to show 
	that this removes the warning.

2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* configure.in:
	* tests/Makefile.am:
	* tests/test-alpha-creation.cc: Added a tests directory, with one 
	simple test, though it doesn't show the problem in the example.

2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.hg: Commented-out the rotate_*() and get_r*_ang*() 
	methods which have been removed from clutter in svn.